updated the quickstart section in readme

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -1,4 +1,5 @@
-# this is for local build
+# This is for local build
+# Use this for the machines with small amount of memory
 
 version: '3'
 
@@ -25,9 +26,5 @@ services:
     environment:
       - AWS_ACCESS_KEY_ID
       - AWS_SECRET_ACCESS_KEY
-      - QUERY_MAX_MEMORY=20GB
-      - QUERY_MAX_MEMORY_PER_NODE=15GB
-      - QUERY_MAX_TOTAL_MEMORY_PER_NODE=30GB
-      - JAVA_HEAP_SIZE=50G
     hostname: "presto"
     container_name: "docker-presto"
